fix overflow

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -12,6 +12,7 @@ $font-stack: Harmattan, sans serif
 
 body
   font-family: 100% $font-stack
+  overflow-x: hidden
 
 
 
@@ -191,6 +192,7 @@ $menu-list-border-left: 1px solid $penny-green-invert
     font-family: Harmattan
   .marquee
     padding-bottom: 10px
+    
   
     
 
